[project]
name = "neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "httpx>=0.28.1",
    "ipython>=9.11.0",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
]
